--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
 {% block content %}
 
 
-<h1 class="jumbotron"> Karibu ni jamboNews</h1>
+<h1 class="jumbotron"> Welcome to the Hotest News</h1>
 
 
 <!-- Science Sources -->
