--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #EEF5DB;
+    background-color: none;
   }
   
   .source-card {
@@ -12,6 +12,6 @@ body {
   
   .categories {
     border: 2px solid black;
-    background-color: blue;
+    background-color: green;
     border-radius: 5px;
   }
