--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -22,10 +22,10 @@
         style="border: 2px solid black;
         border-radius: 5px;
         margin-bottom: 10px;
-        background-color: rgb(223, 229, 230);
+        background-color: black;
         height: 500px;
-        overflow: scroll;">
-        <h3 style="color:blue; text-decoration:underline">{{article.title}}</h3>
+        ">
+        <h3 style="color:#4D5656; text-decoration:underline">{{article.title}}</h3>
         <img src="{{article.image}}" alt="{{article.title}}" style="width:300px; height:200px">
         <p>{{article.description}}</p>
         <button type="button" class="btn btn-info"><a href="{{article.url}}">Read More</a></button>
