--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background-color: none;
   }
   
@@ -14,4 +14,4 @@ body {
     border: 2px solid black;
     background-color: green;
     border-radius: 5px;
-  }
+  } */
