--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,20 +1,20 @@
 
  
 {% macro displaySourceList(source_list) %}
-
+<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Courgette|Shadows+Into+Light&display=swap" rel="stylesheet">
 <div class="row">
   {% for source in source_list %}
   <div class="col-xs col-sm-6 col-md-3 col-lg-3 source-card"
-                      style="border: 2px solid black;
-                      border-radius: 5px;
-                      margin-bottom: 10px;
-                      background-color: rgb(223, 229, 230);
-                      height: 300px;
-                      overflow: scroll;">
-    <h3><a href="/source/{{source.id}}" style="text-decoration:underline">{{source.name}}</a></h3>
+  style="border: 2px solid black;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  background-color: #EAEDED;
+  height: 300px;
+  overflow: scroll;">
+    <h3><a href="/source/{{source.id}}" style="color: teal; font-family: 'Cormorant Garamond', serif; font-size: 25px;font-style: bold;">{{source.name}}</a></h3>
 
     <p>{{source.description}}</p>
-    <button type="button"><a href="{{source.url}}">{{source.name}} Homepage</a></button>
+    <button type="button"><a href="{{source.url}}" style="color: teal; font-family: 'Cormorant Garamond', serif; font-size: 20px;font-style: bold;">{{source.name}} Homepage</a></button>
 
   </div>
   {% endfor %}
