--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,10 +27,10 @@
 
 <!-- Science Sources -->
 <div class="categories container" style="border: 2px solid black;
-background-color: #85929E;
+background-color: #212F3C;
 margin-bottom: 10px;
 border-radius: 5px;">
-  <h3> Science</h3>
+  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px; "> Science</h3>
   <ul>
     {{ macro.displaySourceList(science)}}
   </ul>
@@ -39,10 +39,10 @@ border-radius: 5px;">
 
 <!-- Business Sources -->
 <div class="categories container"  style="border: 2px solid black;
-background-color: #85929E;
+background-color: #34495E ;
 margin-bottom: 10px;
 border-radius: 5px;">
-  <h3> Business</h3>
+  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px;" > Business</h3>
   <ul>
     {{ macro.displaySourceList(business)}}
   </ul>
@@ -51,10 +51,10 @@ border-radius: 5px;">
 
 <!-- Entertainment Sources -->
 <div class="categories container"  style="border: 2px solid black;
-background-color: #85929E;
+background-color: #212F3C;
 margin-bottom: 10px;
 border-radius: 5px;">
-  <h3> Entertainment</h3>
+  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px;" > Entertainment</h3>
   <ul>
     {{ macro.displaySourceList(entertainment)}}
   </ul>
@@ -63,10 +63,10 @@ border-radius: 5px;">
 
 <!-- General Sources -->
 <div class="categories container"  style="border: 2px solid black;
-background-color: #85929E;
+background-color: #34495E ;
 margin-bottom: 10px;
 border-radius: 5px;">
-  <h3> General</h3>
+  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px;" > General</h3>
   <ul>
     {{ macro.displaySourceList(general)}}
   </ul>
@@ -75,7 +75,7 @@ border-radius: 5px;">
 
 <!-- Technology Sources -->
 <div class="categories container"  style="border: 2px solid black;
-background-color: #85929E;
+background-color: #212F3C;
 margin-bottom: 10px;
 border-radius: 5px;">
   <h3> Technology</h3>
@@ -87,10 +87,10 @@ border-radius: 5px;">
 
 <!-- Health Sources -->
 <div class="categories container"  style="border: 2px solid black;
-background-color: #85929E;
+background-color: #34495E;
 margin-bottom: 10px;
 border-radius: 5px;">
-  <h3> Health</h3>
+  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px;" > Health</h3>
   <ul>
     {{ macro.displaySourceList(health)}}
   </ul>
