--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -24,7 +24,7 @@
         margin-bottom: 10px;
         background-color: black;
         height: 500px;
-        ">
+        overflow: scroll;">
         <h3 style="color:#4D5656; text-decoration:underline">{{article.title}}</h3>
         <img src="{{article.image}}" alt="{{article.title}}" style="width:300px; height:200px">
         <p>{{article.description}}</p>
