--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,71 +30,14 @@
 background-color: #212F3C;
 margin-bottom: 10px;
 border-radius: 5px;">
-  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px; "> Science</h3>
+  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px; "> General News</h3>
   <ul>
     {{ macro.displaySourceList(science)}}
   </ul>
 </div>
 
-
-<!-- Business Sources -->
-<div class="categories container"  style="border: 2px solid black;
-background-color: #34495E ;
-margin-bottom: 10px;
-border-radius: 5px;">
-  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px;" > Business</h3>
-  <ul>
-    {{ macro.displaySourceList(business)}}
-  </ul>
+<div class="footer">
+  <p class="jumbotron" style="color: black; font-family: 'Shadows Into Light', cursive; font-size: 25px; text-align: center;"> &copy;<strong> 2019 Copy Right  All right reserved.</strong><p>
 </div>
-
-
-<!-- Entertainment Sources -->
-<div class="categories container"  style="border: 2px solid black;
-background-color: #212F3C;
-margin-bottom: 10px;
-border-radius: 5px;">
-  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px;" > Entertainment</h3>
-  <ul>
-    {{ macro.displaySourceList(entertainment)}}
-  </ul>
-</div>
-
-
-<!-- General Sources -->
-<div class="categories container"  style="border: 2px solid black;
-background-color: #34495E ;
-margin-bottom: 10px;
-border-radius: 5px;">
-  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px;" > General</h3>
-  <ul>
-    {{ macro.displaySourceList(general)}}
-  </ul>
-</div>
-
-
-<!-- Technology Sources -->
-<div class="categories container"  style="border: 2px solid black;
-background-color: #212F3C;
-margin-bottom: 10px;
-border-radius: 5px;">
-  <h3> Technology</h3>
-  <ul>
-    {{ macro.displaySourceList(technology)}}
-  </ul>
-</div>
-
-
-<!-- Health Sources -->
-<div class="categories container"  style="border: 2px solid black;
-background-color: #34495E;
-margin-bottom: 10px;
-border-radius: 5px;">
-  <h3 style="color: #EAEDED;font-family: 'Courgette', cursive; font-size: 50px;" > Health</h3>
-  <ul>
-    {{ macro.displaySourceList(health)}}
-  </ul>
-</div>
-
 </body>
 {% endblock %}
